--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,5 +1,9 @@
 <h1>Shop to Impress</h1>
 
+<h5>Nama: </h5>
+<p>{{ nama }}<p>
+<h5>Kelas: </h5>
+<p>{{ kelas }}<p>
 <h5>Name: </h5>
 <p>{{ name }}<p>
 <h5>Price: </h5>
