--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,12 +1,49 @@
+{% extends 'base.html' %}
+{% block content %}
 <h1>Shop to Impress</h1>
 
 <h5>Nama: </h5>
 <p>{{ nama }}<p>
-<h5>Kelas: </h5>
-<p>{{ kelas }}<p>
-<h5>Name: </h5>
-<p>{{ name }}<p>
-<h5>Price: </h5>
-<p>{{ price }}<p>
-<h5>Description: </h5>
-<p>{{ description }}<p>
+
+<h5>Kelas:</h5>
+<p>{{ kelas }}</p>
+
+<h5>Name:</h5>
+<p>{{ name }}</p>
+
+<h5>Price:</h5>
+<p>{{ price }}</p>
+
+<h5>Description:</h5>
+<p>{{ description }}</p>
+
+{% if not mood_entries %}
+<p>Belum ada data product pada shop to impress.</p>
+{% else %}
+<table>
+  <tr>
+    <th>Product</th>
+    <th>Time</th>
+    <th>Description</th>
+    <th>Amount</th>
+  </tr>
+
+  {% comment %} Berikut cara memperlihatkan data product di bawah baris ini 
+  {% endcomment %} 
+  {% for mood_entry in mood_entries %}
+  <tr>
+    <td>{{mood_entry.name}}</td>
+    <td>{{mood_entry.time}}</td>
+    <td>{{mood_entry.price}}</td>
+    <td>{{mood_entry.description}}</td>
+  </tr>
+  {% endfor %}
+</table>
+{% endif %}
+
+<br />
+
+<a href="{% url 'main:create_mood_entry' %}">
+  <button>Add New Product</button>
+</a>
+{% endblock content %}
