--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -9,7 +9,7 @@
 <p>{{ kelas }}</p>
 
 <h5>Name:</h5>
-<p>{{ name }}</p>
+<p>{{ product }}</p>
 
 <h5>Price:</h5>
 <p>{{ price }}</p>
@@ -24,15 +24,15 @@
   <tr>
     <th>Product</th>
     <th>Time</th>
+    <th>Price</th>
     <th>Description</th>
-    <th>Amount</th>
   </tr>
 
   {% comment %} Berikut cara memperlihatkan data product di bawah baris ini 
   {% endcomment %} 
   {% for mood_entry in mood_entries %}
   <tr>
-    <td>{{mood_entry.name}}</td>
+    <td>{{mood_entry.product}}</td>
     <td>{{mood_entry.time}}</td>
     <td>{{mood_entry.price}}</td>
     <td>{{mood_entry.description}}</td>
@@ -46,4 +46,10 @@
 <a href="{% url 'main:create_mood_entry' %}">
   <button>Add New Product</button>
 </a>
+
+<a href="{% url 'main:logout' %}">
+  <button>Logout</button>
+  <h5>Sesi terakhir login: {{ last_login }}</h5>
+</a>
+
 {% endblock content %}
