--- a/main/templates/create_mood_entry.html
+++ b/main/templates/create_mood_entry.html
@@ -1,18 +1,31 @@
-{% extends 'base.html' %} 
-{% block content %}
-<h1>Add New Product</h1>
+{% extends 'base.html' %}
+{% load static %}
+{% block meta %}
+<title>Add New Product</title>
+{% endblock meta %}
 
-<form method="POST">
-  {% csrf_token %}
-  <table>
-    {{ form.as_table }}
-    <tr>
-      <td></td>
-      <td>
-        <input type="submit" value="Add Product" />
-      </td>
-    </tr>
-  </table>
-</form>
+{% block content %}
+{% include 'navbar.html' %}
+
+<div class="flex flex-col min-h-screen bg-gray-100">
+  <div class="container mx-auto px-4 py-8 mt-16 max-w-xl">
+    <h1 class="text-3xl font-bold text-center mb-8 text-black">Create New Product</h1>
+  
+    <div class="bg-white shadow-md rounded-lg p-6 form-style">
+      <!-- Add enctype attribute for file upload -->
+      <form method="POST" enctype="multipart/form-data" class="space-y-6">
+        {% csrf_token %}
+        {{ form.as_p }}  <!-- This will include all form fields including the image upload -->
+        
+        <!-- Keep your rating button and any other features -->
+        <div class="flex justify-center mt-6">
+          <button type="submit" class="bg-indigo-600 text-white font-semibold px-6 py-3 rounded-lg hover:bg-indigo-700 transition duration-300 ease-in-out w-full">
+            Add Your Product
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
